ifupdown (0.8.7) UNRELEASED; urgency=medium

  * Impose a 5 minute timeout for starting network services. Closes: #318577
  * Give an error when trying to up a dhcp interface when no DHCP client is
    installed. Closes: #471926
  * Add a section in the manual about extensions provided by other packages.
    Closes: #482405
  * Use absolute paths to binaries called by ifup/ifdown. Closes: #365114

 -- Guus Sliepen <guus@debian.org>  Sat, 09 Jan 2016 11:43:15 +0100

ifupdown (0.8.6) unstable; urgency=medium

  * Remove the Breaks: udev (<< 228-3~) to work around a bug in udev's prerm
    script. Closes: #809658, #809743
  * Run ip link up on manual interfaces, but ignore any errors.
  * Use sysctl to set the IPv6-specific MTU of an interface. Closes: #809714

 -- Guus Sliepen <guus@debian.org>  Tue, 05 Jan 2016 15:57:45 +0100

ifupdown (0.8.5) unstable; urgency=medium

  [ Stéphane Graber ]
  * Allow setting the MTU and HWADDR on manual interfaces. Closes: #809169

  [ Guus Sliepen ]
  * Remove Depends/Replaces/Breaks for ancient packages.
  * Move ifupdown related files from the systemd and udev packages to this
    package. Closes: #809171

 -- Guus Sliepen <guus@debian.org>  Sat, 02 Jan 2016 00:41:49 +0100

ifupdown (0.8.4) unstable; urgency=medium

  * Schedule networking.service After=network-online.target.
  * Use dh-systemd.
  * Enable parallel builds.

 -- Guus Sliepen <guus@debian.org>  Sat, 26 Dec 2015 15:56:50 +0100

ifupdown (0.8.3) unstable; urgency=medium

  [ Guus Sliepen ]
  * Fix FTBFS while running the testsuite, caused by conditional call to
    settle-dad.sh. Closes: #807617
  * Make networking.service WantedBy=network-online.target.

  [ Svante Signell ]
  * Move the test target from debian/rules to Makefile
  * Move the shell script testbuild functions to Makefile
  * Move test files from debian/ to tests/
  * Prevent generated *.c-files from being removed during build